tests/baselines/reference/recursiveObjectLiteral.errors.txt
recursiveObjectLiteral.ts(1,5): error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== recursiveObjectLiteral.ts (1 errors) ====
    var a = { f: a };
        ~
!!! error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.